[gd_scene load_steps=6 format=3 uid="uid://ovlrpgxqo0vc"]

[ext_resource type="Theme" uid="uid://b114jr7tx8ik" path="res://Extract From Others/Title.tres" id="1_23nwk"]
[ext_resource type="Script" path="res://UI/Game_Report.gd" id="2_tvjn0"]
[ext_resource type="Shader" path="res://Effects/Main_Menu.gdshader" id="3_ba56o"]
[ext_resource type="AudioStream" uid="uid://0tmjwaakvpgp" path="res://Assets/515434__tictac9__african-safari-beat-tictac9.mp3" id="4_k1qy8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jvrxk"]
shader = ExtResource("3_ba56o")
shader_parameter/OCTAVE = 6
shader_parameter/mulscale = 5.0
shader_parameter/height = 0.6
shader_parameter/tide = 0.1
shader_parameter/foamthickness = 0.1
shader_parameter/timescale = 1.0
shader_parameter/waterdeep = 0.3
shader_parameter/WATER_COL = Color(0, 0, 0, 1)
shader_parameter/WATER2_COL = Color(0.4, 0.1, 0, 1)
shader_parameter/FOAM_COL = Color(0.13, 0.1, 0.1, 1)

[node name="Game Report" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 425.0
offset_top = 123.0
offset_right = 1577.0
offset_bottom = 923.0
theme = ExtResource("1_23nwk")
script = ExtResource("2_tvjn0")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jvrxk")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 800.0
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 5.0
offset_right = 800.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 60
text = "The Game Report"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -270.0
offset_right = 292.5
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Final Score"

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -195.0
offset_right = 292.5
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Time Left:"

[node name="Lives" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -120.0
offset_right = 292.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Zombies Left:"

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 400.0
offset_right = 676.0
offset_bottom = 440.0
text = "Play Again
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_k1qy8")

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
